--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "scrape:one": "node scripts/scraper/scrape-one.js",
+    "scrape:index": "node scripts/scraper/scrape-index.js",
+    "scrape:all": "node scripts/scraper/scrape-all.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +27,7 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "playwright": "^1.55.0"
   }
 }
